<resources>
    <string name="app_name">Decision Theory Labs</string>

    <string name="load_file">Load file</string>
    <string name="history">History</string>
    <string name="about">About</string>

    <string name="no_data">¯\\_(ツ)_/¯ \n No data to work with</string>
    <string name="processing_data">Processing data</string>
    <string name="please_wait">Please wait....</string>
    <string name="pick_lab_text">Pick Lab</string>
    <string name="x_text">X : </string>
    <string name="u_text">U : </string>

    <string name="lab_1">Lab 1</string>
    <string name="lab_2">Lab 2</string>
    <string name="lab_3">Lab 3</string>
    <string name="lab_4">Lab 4</string>
    <string name="lecture_1">Lecture 1</string>

    <string name="increase_text">Increase</string>
    <string name="edit_text">Edit</string>
    <string name="decrease_text">Decrease</string>
    <string name="function_text">Function</string>
    <string name="desired_value_text">Desired value</string>
    <string name="alpha_text">Alpha</string>
    <string name="fill_the_form_and_press_start_text">Fill the form and press start.</string>
    <string name="cancel_text">Cancel</string>
    <string name="start_text">Start</string>
    <string name="n_text">Size</string>
    <string name="delta_text">Delta</string>

    <!--Fragment(auto gen)-->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Navigation drawer text(auto gen)-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="lab_5">Lab 5</string>


</resources>
